WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95026
Frequent crashes in PluginView::scriptObject under runtimeObjectCustomGetOwnPropertySlot
https://bugs.webkit.org/show_bug.cgi?id=95026
Summary
Frequent crashes in PluginView::scriptObject under runtimeObjectCustomGetOwnP...
Jack van Soest
Reported
2012-08-26 00:27:35 PDT
Created
attachment 160594
[details]
Crash log Webkit suddenly crashes. It happens daily. With Safari no problems
Attachments
Crash log
(61.04 KB, text/plain)
2012-08-26 00:27 PDT
,
Jack van Soest
no flags
Details
Patch v1 - Fix + regression test
(13.94 KB, patch)
2012-09-04 17:26 PDT
,
Brady Eidson
aestes
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-08-27 10:54:15 PDT
Brady, this sounds related to async instantiation. <
rdar://problem/12142226
>
Brady Eidson
Comment 2
2012-09-04 16:49:06 PDT
***
Bug 95692
has been marked as a duplicate of this bug. ***
Brady Eidson
Comment 3
2012-09-04 16:50:44 PDT
Dupe
https://bugs.webkit.org/show_bug.cgi?id=95692
points out that this happens - even with synchronous initialization - after the plugin fails to initialize. The code change to fix this is simple. I'm working on a plugin test for regression testing that fix.
Brady Eidson
Comment 4
2012-09-04 17:26:17 PDT
Created
attachment 162136
[details]
Patch v1 - Fix + regression test
Andy Estes
Comment 5
2012-09-04 18:14:02 PDT
Comment on
attachment 162136
[details]
Patch v1 - Fix + regression test r=me, but you should let the EWS tell you this won't break a non-Mac build before landing.
Brady Eidson
Comment 6
2012-09-04 18:16:24 PDT
(In reply to
comment #5
)
> (From update of
attachment 162136
[details]
) > r=me, but you should let the EWS tell you this won't break a non-Mac build before landing.
Have been waiting patiently since I submitted to EWS. Thanks.
Brady Eidson
Comment 7
2012-09-05 08:38:55 PDT
http://trac.webkit.org/changeset/127595
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug