Tools/DumpRenderTree/qt/TestNetscapePlugin/TestNetscapePlugin.pro
@@ -22,6 +22,7 @@ SOURCES += \
     Tests/GetURLWithJavaScriptURLDestroyingPlugin.cpp \
     Tests/GetUserAgentWithNullNPPFromNPPNew.cpp \
     Tests/NPDeallocateCalledBeforeNPShutdown.cpp \
+    Tests/NPPNewFails.cpp \
     Tests/NPPSetWindowCalledDuringDestruction.cpp \
     Tests/NPRuntimeObjectFromDestroyedPlugin.cpp \
     Tests/NPRuntimeRemoveProperty.cpp \
